--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,7 @@
     <h1>Login</h1>
     {{ .Msg}}
     {{template "loginSignupForm" .Type}}
+    <a href="/login/google">Log in with google</a>
     <a href="/signup">Sign up</a>
 </body>
 </html>
