--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,8 @@
     <h1>Login</h1>
     {{ .Msg}}
     {{template "loginSignupForm" .Type}}
-    <a href="/login/google">Log in with google</a>
-    <a href="/signup">Sign up</a>
+    <a href="/login/google">Log in with google</a><br/>
+    <a href="/signup">Sign up</a><br/>
+    <a href="password/forgot">Forgot password?</a><br/>
 </body>
 </html>
