add reset password

--- a/templates/forgotPassword.html
+++ b/templates/forgotPassword.html
@@ -8,7 +8,7 @@
     <h1>Forgot Password?</h1>
     {{ .Msg}}
     <form method="POST" action="/password/forgot">
-        <input type="email" name="email"/>
+        <input type="email" name="username"/>
         <input type="submit" value="Send reset link">
     </form>
     <a href="/login">Back to Log in</a>
