--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,6 @@
     {{template "loginSignupForm" .Type}}
     <a href="/login/google">Log in with google</a><br/>
     <a href="/signup">Sign up</a><br/>
-    <a href="password/forgot">Forgot password?</a><br/>
+    <a href="/password/forgot">Forgot password?</a><br/>
 </body>
 </html>
