fix reset password

--- a/pkg/templates/resetPassword.html
+++ b/pkg/templates/resetPassword.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Reset password</h1>
-{{ .Msg}}
+{{ .Msg}}<br/>
 
 {{if .ValidToken}}
     <form method="POST" action="/password/new/{{ .Token}}/{{ .Mail}}">
@@ -14,7 +14,7 @@
         <input type="submit"/>
     </form>
 {{else}}
-    <span>Sorry, link is already invalid.</span>
+    <span>Sorry, link is already invalid. You need to send email again.</span>
 {{end}}
 
 <a href="/login">Back to login</a>
